Fix header spacing issues.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,8 +13,15 @@ header{
   align-items: center;
   justify-content: space-around;
 }
+#logo{
+  padding: 0px 10px 0px 15px;
+}
 nav{
   display: inline-flex;
   align-items: center;
   justify-content: space-around;
+  flex-wrap: wrap;
+}
+span{
+  padding-right: 20px;
 }
